[gd_scene load_steps=4 format=3 uid="uid://canq2ojnths1m"]

[ext_resource type="Script" path="res://Scenes/Player/camera_rig.gd" id="1_qi1xk"]
[ext_resource type="Shader" path="res://Assets/Shaders/foreground_shader.gdshader" id="2_41c08"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q3aix"]
shader = ExtResource("2_41c08")
shader_parameter/MULTIPLIER = 0.56
shader_parameter/SCALE = 0.5
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 1.0

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_qi1xk")

[node name="BaseCamera" type="Camera3D" parent="."]
cull_mask = 0
fov = 40.0

[node name="BackgroundViewportContainer" type="SubViewportContainer" parent="BaseCamera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundViewport" type="SubViewport" parent="BaseCamera/BackgroundViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="BackgroundCamera" type="Camera3D" parent="BaseCamera/BackgroundViewportContainer/BackgroundViewport"]
unique_name_in_owner = true
cull_mask = 1
fov = 40.0

[node name="ForegroundViewportContainer" type="SubViewportContainer" parent="BaseCamera"]
material = SubResource("ShaderMaterial_q3aix")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ForegroundViewport" type="SubViewport" parent="BaseCamera/ForegroundViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ForegroundCamera" type="Camera3D" parent="BaseCamera/ForegroundViewportContainer/ForegroundViewport"]
unique_name_in_owner = true
cull_mask = 2
fov = 40.0
